Try to fix mobile nav layout problem

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -122,7 +122,7 @@
     display: flex;
     align-items: center;
     gap: var(--s-sm-0);
-    padding: var(--s-md-0);
+    padding: clamp(var(--s-sm-0), 5vw, var(--s-md-0));
     padding-bottom: 0;
     position: fixed;
     top: 0;
@@ -142,6 +142,10 @@
 
   #root > header.compact > .logo {
     width: 0;
+  }
+
+  #root > header.compact > nav > .logo {
+    transform: translateX(calc(-1 * var(--s-sm-1)));
   }
 
   main.post-detail {
